Done Projects APIs

--- a/468 .Net Fundamentals.Domain/468 .Net Fundamentals.Domain.csproj
+++ b/468 .Net Fundamentals.Domain/468 .Net Fundamentals.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
