--- a/468 .Net Fundamentals.Infrastructure/468 .Net Fundamentals.Infrastructure.csproj
+++ b/468 .Net Fundamentals.Infrastructure/468 .Net Fundamentals.Infrastructure.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.21" />
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
