authenticate and authorize

--- a/468 .Net Fundamentals/appsettings.json
+++ b/468 .Net Fundamentals/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "http://localhost:44396",
+    // 16 characters minimum
+    "Secret": "LeTanTrong123456789"
+  }
 }
