--- a/468 .Net Fundamentals.Service/468 .Net Fundamentals.Service.csproj
+++ b/468 .Net Fundamentals.Service/468 .Net Fundamentals.Service.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
   </ItemGroup>
 
