--- a/468 .Net Fundamentals/appsettings.json
+++ b/468 .Net Fundamentals/appsettings.json
@@ -14,6 +14,8 @@
     "ValidAudience": "User",
     "ValidIssuer": "http://localhost:44396",
     // 16 characters minimum
-    "Secret": "LeTanTrong123456789"
+    "Secret": "LeTanTrong123456789",
+    "RefreshTokenSecret": "refreshLeTanTrong123456789"
+
   }
 }
