--- a/468 .Net Fundamentals/appsettings.json
+++ b/468 .Net Fundamentals/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source=localhost; Initial Catalog=468 .Net Fundamentals; Trusted_connection=True"
+    "DefaultConnection": "Data Source=localhost; Initial Catalog=468 .Net Fundamentals; Trusted_connection=True"
   },
   "Logging": {
     "LogLevel": {
@@ -16,6 +16,15 @@
     // 16 characters minimum
     "Secret": "LeTanTrong123456789",
     "RefreshTokenSecret": "refreshLeTanTrong123456789"
-
+  },
+  "Sentry": {
+    "Dsn": "https://a25d5a34688a435ba8517a10f934c16f@o1157697.ingest.sentry.io/6240257",
+    "IncludeRequestPayload": true,
+    "SendDefaultPii": true,
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticsLevel": "Error"
   }
 }
