--- a/468 .Net Fundamentals/468 .Net Fundamentals.csproj
+++ b/468 .Net Fundamentals/468 .Net Fundamentals.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.21" />
@@ -25,6 +26,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\468 .Net Fundamentals.Service\468 .Net Fundamentals.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middleware\" />
   </ItemGroup>
 
 
